# Simulador-de-fuerzas-gravitatorias---SFG

./: amcWindow.ui  aucWindow.ui  com.git.sfg.gschema.xml  main.c  mainWindow.ui  menuButtonOpciones.ui  meson.build  settingsWindow.ui  sfg.gresource.xml  sfgAmcWindow.c  sfgAmcWindow.h  sfgApp.c  sfgApp.h  sfgAucWindow.c  sfgAucWindow.h  sfgMainWindow.c  sfgMainWindow.h  sfgSettingsWindow.c  sfgSettingsWindow.h  sfgSimulador.c  sfgSimulador.h
